--- a/app.json
+++ b/app.json
@@ -27,7 +27,7 @@
     "OWNER_USERNAME": {
       "description": "fill with your telegram account username without @",
       "required": true,
-      "value": "ShiningOff"
+      "value": "Dynamite_101"
     },
     "SUPPORT_GROUP": {
       "description": "if you have group, then fill the group username here without @",
