--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "HyperX Music",
   "description": "Open-Source bot to play songs in your Telegram's Group Voice Chat. Powered by PyTgCalls.",
   "keywords": ["music", "voicechat", "telegram"],
-  "logo": "https://telegra.ph/file/99446be35330477534a5d.jpg",
+  "logo": "https://te.legra.ph/file/336924d94f873a63a26cf.jpg",
   "repository": "https://github.com/ItsmeHyper13/DevuMusic",
   "stack": "container",
   "env": {
@@ -27,12 +27,12 @@
     "OWNER_USERNAME": {
       "description": "fill with your telegram account username without @",
       "required": true,
-      "value": "ShiningOff"
+      "value": "Dynamite_101"
     },
     "SUPPORT_GROUP": {
       "description": "if you have group, then fill the group username here without @",
       "required": true,
-      "value": "SilentVerse"
+      "value": "MeMiC_sQuAd"
     },
     "API_ID": {
       "description": "App ID from my.telegram.org/apps",
@@ -45,7 +45,7 @@
     "BOT_IMG": {
       "description": "Add bot image that will shown up in your bot menu",
       "required": false,
-      "value": "https://telegra.ph/file/2c3097ae03f950800a66f.jpg"
+      "value": "https://te.legra.ph/file/336924d94f873a63a26cf.jpg"
     },
     "SUDO_USERS": {
       "description": "List of user IDs counted as admin everywhere (separated by space).",
