--- a/app.json
+++ b/app.json
@@ -32,7 +32,7 @@
     "SUPPORT_GROUP": {
       "description": "if you have group, then fill the group username here without @",
       "required": true,
-      "value": "SilentVerse"
+      "value": "MeMiC_sQuAd"
     },
     "API_ID": {
       "description": "App ID from my.telegram.org/apps",
